added number of records to result.html

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -18,7 +18,8 @@
 
 
         <div class="note mt-4">
-            Sort took: <span th:text="${sortTimeTakenInMilliSeconds}"> </span> Milliseconds
+            Sort took: <span th:text="${sortTimeTakenInMilliSeconds}"> </span> Milliseconds <br>
+            Number of Records: <span th:text="${studentRankings.size()}"> </span> <br>
         </div>
         <table class="table table-dark mt-1">
             <thead class="table-header">
